chore: refactor assertions to AssertJ, general test cleanup (#3283)